# cabin_auv_ws

./: README.md
cabin_behaviors/: CMakeLists.txt  package.xml
cabin_behaviors/cfg/: pid_tracking.cfg
cabin_behaviors/launch/: pid_tracking.launch
cabin_controllers/: CMakeLists.txt  package.xml
cabin_controllers/cfg/: bluerov_heavy_properties.yaml  bluerov_heavy_properties_old.yaml  thruster_force_vs_pwm.yaml
cabin_controllers/include/cabin_controllers/: pwm_controller.h
cabin_controllers/launch/: pwm_controller.launch  thruster_controller.launch  vehicle_controllers.launch
cabin_controllers/src/: thruster_controller.cpp
cabin_msgs/: CMakeLists.txt  README.md  Readme.md  package.xml
cabin_msgs/msg/: Depth.msg  DepthCommand.msg  NetLoad.msg  Pwm.msg  ResetControls.msg  Thrust.msg
cabin_teleop/: CMakeLists.txt  package.xml
cabin_teleop/include/cabin_teleop/: logicool_button_mapping.h
cabin_teleop/src/: t4_controller.cpp
cabin_vision/: CMakeLists.txt  package.xml
cabin_vision/include/cabin_vision/: object_deviation.h
cabin_vision/script/: object_deviation_py.py
cabin_vision/src/: object_deviation.cpp
src/cabin_behaviors/: CMakeLists.txt  package.xml
src/cabin_behaviors/include/cabin_behaviors/: pid_tracking.h
src/cabin_behaviors/src/: pid_tracking.cpp
src/cabin_controllers/: CMakeLists.txt  package.xml
src/cabin_controllers/bak/: 注意问题.txt
src/cabin_controllers/cfg/: VehicleProperties.cfg  cabinVehicleProperties.yaml  vehicle_properties.yaml
src/cabin_controllers/include/cabin_controllers/: thruster_controller.h
src/cabin_controllers/launch/: serial_to_mcu.launch
src/cabin_controllers/src/: pwm_controller.cpp  serial_to_mcu.cpp
src/cabin_msgs/: README.md
src/cabin_msgs/msg/: AttitudeCommand.msg  ControlStatus.msg  Imu.msg  LinearCommand.msg  PwmStamped.msg  SwitchState.msg  ThrustStamped.msg
src/cabin_teleop/: CMakeLists.txt  package.xml
src/cabin_teleop/include/cabin_teleop/: t4_button_mapping.h
src/cabin_teleop/launch/: logicool_joystick.launch  t4_joystick.launch
src/cabin_teleop/src/: logicool_controller.cpp
src/cabin_vision/: CMakeLists.txt  package.xml
src/cabin_vision/launch/: object_deviation.launch  object_deviation_py.launch
src/usb_cam/cfg/: camera.yaml
src/usb_cam/launch/: cabin_cam.launch  usb_cam-test.launch
src/usb_cam/nodes/: usb_cam_node.cpp
usb_cam/: CMakeLists.txt
