<?xml version="1.0"?>
<package format="2">
  <name>cabin_vision</name>
  <version>0.0.1</version>
  <description>Process data from the output of darknet_ros</description>

  <maintainer email="xiekb@pcl.ac.cn">Cabin</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/cabin_vision</url> -->

  <author email="xiekb@pcl.ac.cn">Cabin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosmsgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosmsgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosmsgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
